--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,6 @@ services:
       TZ: Asia/Tokyo
     tty: true
     restart: always
-    # privileged: true
     depends_on:
       - db
   db:
@@ -29,6 +28,7 @@ services:
       MYSQL_ROOT_PASSWORD: uouo
       TZ: Asia/Tokyo
     restart: always
+    privileged: true
     networks:
       default:
         aliases:
